<resources>
    <string name="app_name">ArithmeticChallenge</string>
    <string name="greeting">Hi There! Click on what you would like to play.</string>
    <string name="button_Answer1">Answer 1</string>
    <string name="button_Answer2">Answer 2</string>
    <string name="button_Answer3">Answer 3</string>
    <string name="button_Menu">Menu</string>
    <string name="button_Exit">Quit?</string>
    <string name="textView_Equation">Equation</string>
    <string name="textView_YourScore">Your Score</string>
    <string name="textView_HighScore">High Score</string>
    <string name="correct_toast">Mr.Gustin would be proud</string>
    <string name="incorrect_toast">Shameful</string>
    <string name="win_text">Good job!</string>
    <string name="next_button">Next</string>
</resources>
